--- a/_layouts/default.hbs
+++ b/_layouts/default.hbs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="I’m Dennis Heibült, a web developer from Bremen, Germany. I’m writing about front-end architecture and workflow optimisation.">
     <title>Dennis Heibült</title>
 </head>
 <body>
