--- a/_includes/site-nav.hbs
+++ b/_includes/site-nav.hbs
@@ -1,12 +1,14 @@
-<h2>Posts:</h2>
 <nav>
-    <ul>
-        {{#each collections.post }}
-            <li>
-                <a href="{{ this.url }}">
-                    {{ this.data.title }} ({{ this.data.publish-date }})
-                </a>
-            </li>
-        {{/each}}
+    <ul class="c-site-nav">
+        <li>
+            <a href="/">
+                Articles
+            </a>
+        </li>
+        <li>
+            <a href="/about/">
+                About
+            </a>
+        </li>
     </ul>
 </nav>
