--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -9,7 +9,8 @@
         html {
             background-color: #fcfcfc;
             color: #222;
-            font-size: 16px;
+            font-size: 18px;
+            line-height: 1.5;
         }
 
         @media screen and (min-width: 480px) {
@@ -20,12 +21,17 @@
 
         @media screen and (min-width: 1480px) {
             html {
-                font-size: 20px;
+                font-size: 22px;
             }
         }
 
         body {
             margin: 0;
+        }
+
+        h1, h2, h3, h4, h5, h6 {
+            line-height: 1.25;
+            font-family: sans-serif;
         }
 
         a {
@@ -93,6 +99,7 @@
             color: inherit;
             text-decoration: none;
             line-height: 3rem;
+            font-family: sans-serif;
         }
 
         .c-link-list {
@@ -109,9 +116,16 @@
         .c-link-list a {
             display: flex;
             justify-content: space-between;
-            line-height: 2rem;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
+            font-size: 1.15rem;
+            line-height: 1.25rem;
             color: #2a628f;
             text-decoration: none;
+        }
+
+        .c-link-list__text {
+            margin-right: 0.5rem;
         }
 
         .c-link-list__meta {
@@ -120,14 +134,14 @@
     </style>
 </head>
 <body>
-    {{> page-head }}
+    {% include "page-head.njk" %}
 
     <main class="o-page-wrap">
-        {{#if title}}
+        {% if title %}
             <h1>{{ title }}</h1>
-        {{/if}}
+        {% endif %}
 
-        {{{ content }}}
+        {{ content | safe }}
     </main>
 </body>
 </html>
