--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -34,6 +34,23 @@
             font-family: sans-serif;
         }
 
+        /* Font-sizes are based on a modular scale with a ratio of `1.2` */
+        h1 {
+            font-size: 1.728rem;
+        }
+
+        h2 {
+            font-size: 1.44rem;
+        }
+
+        h3 {
+            font-size: 1.2rem;
+        }
+
+        h4, h5, h6 {
+            font-size: 1rem;
+        }
+
         a {
             color: #2a628f;
         }
@@ -42,7 +59,7 @@
         kbd {
             padding: 0.125rem 0.25rem;
             border-radius: 0.125rem;
-            font-size: 0.85em;
+            font-size: 0.833em;
         }
 
         code {
@@ -66,7 +83,7 @@
             padding: 0;
             border-radius: 0;
             background-color: transparent;
-            font-size: 0.85em;
+            font-size: 0.833em;
         }
 
         .o-page-wrap {
@@ -118,7 +135,7 @@
             justify-content: space-between;
             padding-top: 1rem;
             padding-bottom: 1rem;
-            font-size: 1.15rem;
+            font-size: 1.2rem;
             line-height: 1.25rem;
             color: #2a628f;
             text-decoration: none;
@@ -129,7 +146,7 @@
         }
 
         .c-link-list__meta {
-            font-size: 0.85em;
+            font-size: 0.833em;
         }
     </style>
 </head>
