--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -77,6 +77,7 @@
             padding: 0.8333rem;
             border-radius: 0.125rem;
             background-color: #eaeaea;
+            overflow-x: auto;
         }
 
         pre code {
