--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="I’m Dennis Heibült, a web developer from Bremen, Germany. I’m writing about front-end architecture and workflow optimisation.">
-    <title>Dennis Heibült</title>
+    <title>Dennis Heibült{% if title %} — {{ title }}{% endif %}</title>
     <style>
         html {
             background-color: #fcfcfc;
@@ -164,6 +164,19 @@
             content: "tl;dr:";
         }
 
+        .c-page-title {
+            margin-bottom: 1rem;
+        }
+
+        .c-page-title__title {
+            margin-bottom: 0;
+        }
+
+        .c-page-title__meta {
+            font-size: 0.8333rem;
+            color: #666;
+        }
+
         .u-visually-hidden {
             position: absolute;
             height: 1px;
@@ -178,7 +191,10 @@
 
     <main class="o-page-wrap">
         {% if title %}
-            <h1>{{ title }}</h1>
+            <header class="c-page-title">
+                <h1 class="c-page-title__title">{{ title }}</h1>
+                <time class="c-page-title__meta" datetime="{{ date }}">{{ publishDate }}</time>
+            </header>
         {% endif %}
 
         {% if tldr %}
