--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -77,6 +77,7 @@
             padding: 0.8333rem;
             border-radius: 0.125rem;
             background-color: #eaeaea;
+            border: 1px solid #d5d5d5;
             overflow-x: auto;
         }
 
@@ -140,6 +141,13 @@
             line-height: 1.25rem;
             color: #2a628f;
             text-decoration: none;
+        }
+
+        .c-info {
+            padding: 0.833rem;
+            background-color: #eaeaea;
+            border: 1px solid #d5d5d5;
+            border-radius: 0.125rem;
         }
 
         @media screen and (max-width: 720px) {
@@ -208,6 +216,13 @@
                 <h1 class="c-page-title__title">{{ title }}</h1>
                 <time class="c-page-title__meta" datetime="{{ date }}">{{ publishDate }}</time>
             </header>
+        {% endif %}
+
+        {% if (lang == 'en') %}
+            <p class="c-info"><a href="./de/">This article is also available in german</a>.</p>
+        {% endif %}
+        {% if (lang == 'de') %}
+            <p class="c-info"><a href="../">Dieser Artikel ist auch in englischer Sprache verfügbar</a>.</p>
         {% endif %}
 
         {% if tldr %}
