--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -9,34 +9,56 @@
         html {
             background-color: #fcfcfc;
             color: #222;
-            font-size: 18px;
-            line-height: 1.5;
+            font-family: "Noto Serif", serif;
+            font-size: 16px;
+            line-height: 1.75;
         }
 
         @media screen and (min-width: 480px) {
             html {
-                font-size: calc(16px + (20 - 16) * ((100vw - 480px) / (1480 - 480)));
+                font-size: calc(16px + (19 - 16) * ((100vw - 480px) / (1480 - 480)));
             }
         }
 
         @media screen and (min-width: 1480px) {
             html {
-                font-size: 22px;
+                font-size: 19px;
             }
         }
 
-        body {
+        body,
+        h1, h2, h3, h4, h5, h6,
+        blockquote, p, pre,
+        dl, dd, ol, ul,
+        figure,
+        hr,
+        fieldset, legend {
             margin: 0;
+            padding: 0;
+        }
+
+        address,
+        h1, h2, h3, h4, h5, h6,
+        blockquote, p, pre,
+        dl, ol, ul,
+        figure,
+        hr,
+        table,
+        fieldset {
+            margin-bottom: 2.074rem;
         }
 
         h1, h2, h3, h4, h5, h6 {
+            margin-top: 4.3rem;
             line-height: 1.25;
-            font-family: sans-serif;
+            font-family: "Lato", sans-serif;
+            font-weight: 300;
         }
 
         /* Font-sizes are based on a modular scale with a ratio of `1.2` */
         h1 {
-            font-size: 1.728rem;
+            margin-top: 0;
+            font-size: 2.986rem;
         }
 
         h2 {
@@ -97,6 +119,7 @@
         }
 
         .c-page-head {
+            margin-bottom: 2.074rem;
             border-bottom: 1px solid #eaeaea;
         }
 
@@ -118,10 +141,18 @@
             color: inherit;
             text-decoration: none;
             line-height: 2.986rem;
-            font-family: sans-serif;
+            font-family: "Lato", sans-serif;
+            font-weight: 300;
         }
 
         .c-link-list {
+        }
+
+        .c-link-list__title {
+            margin-top: 0;
+        }
+
+        .c-link-list__list {
             margin: 0;
             padding: 0;
             list-style: none;
@@ -137,7 +168,7 @@
             justify-content: space-between;
             padding-top: 1rem;
             padding-bottom: 1rem;
-            font-size: 1.2rem;
+            font-size: 1rem;
             line-height: 1.25rem;
             color: #2a628f;
             text-decoration: none;
@@ -172,8 +203,8 @@
         }
 
         .c-tldr {
-            padding-top: 0.8333rem;
-            padding-bottom: 0.8333rem;
+            padding-top: 1rem;
+            padding-bottom: 1rem;
             border-top: 1px solid #eaeaea;
             border-bottom: 1px solid #eaeaea;
             font-weight: bold;
@@ -186,7 +217,7 @@
         }
 
         .c-page-title {
-            margin-bottom: 1rem;
+            margin-bottom: 2.074rem;
         }
 
         .c-page-title__title {
@@ -194,8 +225,10 @@
         }
 
         .c-page-title__meta {
+            display: block;
+            margin-top: 0.833rem;
             font-size: 0.8333rem;
-            color: #666;
+            color: #7f7f7f;
         }
 
         .u-visually-hidden {
