--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -375,7 +375,7 @@
     <main class="o-page-wrap">
         {% if title %}
             <header class="c-page-title">
-                <h1 class="c-page-title__title">{{ title }}</h1>
+                <h1 class="c-page-title__title">{{ title | safe }}</h1>
                 <time class="c-page-title__meta" datetime="{{ date }}">{{ publishDate }}</time>
             </header>
         {% endif %}
