Add daily photo #1 []

--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -119,6 +119,11 @@
             margin-bottom: 0.833rem;;
         }
 
+        img {
+            max-width: 100%;
+            font-style: italic;
+        }
+
         .o-page-wrap {
             max-width: 40rem;
             margin-left: auto;
