--- a/_includes/site-nav.njk
+++ b/_includes/site-nav.njk
@@ -6,6 +6,11 @@
             </a>
         </li>
         <li>
+            <a href="/photos/">
+                Photos
+            </a>
+        </li>
+        <li>
             <a href="/about/">
                 About
             </a>
