Provide thumbnail images for daily photo overview [09-15-00]

--- a/_includes/site-nav.njk
+++ b/_includes/site-nav.njk
@@ -6,8 +6,8 @@
             </a>
         </li>
         <li>
-            <a href="/photos/">
-                Photos
+            <a href="/dailyphoto/">
+                Daily Photo
             </a>
         </li>
         <li>
