--- a/_layouts/default.njk
+++ b/_layouts/default.njk
@@ -193,6 +193,34 @@
             text-decoration: none;
         }
 
+        .c-image-wall {
+            margin-bottom: 2.074rem;
+        }
+
+        .c-image-wall__title {
+            margin-top: 0;
+        }
+
+        .c-image-wall__list {
+            margin: 0;
+            padding: 0;
+            list-style: none;
+            columns: auto 160px;
+            column-gap: 0;
+        }
+
+        .c-image-wall li {
+            margin-bottom: 0;
+        }
+
+        .c-image-wall a {
+            display: block;
+        }
+
+        .c-image-wall img {
+            display: block;
+        }
+
         .c-info {
             padding: 0.833rem;
             background-color: #eaeaea;
